--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">   
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Four card feature section</title>
 </head>
 <body class="body">
@@ -21,22 +21,22 @@
         <article class="card card--cyan">
             <h2 class="card__title">Supervisor</h2>
             <p class="card__info">Monitors activity to identify project roadblocks</p>
-            <img src="/assets/img/icon-supervisor.svg" alt="" class="card__icon">
+            <img src="assets/img/icon-supervisor.svg" alt="" class="card__icon">
         </article>
             <article class="card card--red">
                 <h2 class="card__title">Team Builder</h2>
                 <p class="card__info">Scans our talent network to create the optimal team for your project</p>
-                <img src="/assets/img/icon-team-builder.svg" alt="" class="card__icon">
+                <img src="assets/img/icon-team-builder.svg" alt="" class="card__icon">
             </article>
             <article class="card card--orange">
                 <h2 class="card__title">Karma</h2>
                 <p class="card__info">Regularly evaluates our talent to ensure quality</p>
-                <img src="/assets/img/icon-karma.svg" alt="" class="card__icon">
+                <img src="assets/img/icon-karma.svg" alt="" class="card__icon">
             </article>
             <article class="card card--blue">
                 <h2 class="card__title">Calculator</h2>
                 <p class="card__info">Uses data from past projects to provide better delivery estimates</p>
-                <img src="/assets/img/icon-calculator.svg" alt="" class="card__icon">
+                <img src="assets/img/icon-calculator.svg" alt="" class="card__icon">
             </article>
             
     </main>
